:sparkles: [#47] add help_text to serializers and filters
